# Square

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.rm  Square.sln  Square.vcxproj  Square.vcxproj.filters  agent.b  main.cpp  make.out  make_glslang.sh  make_glslang_win32.bat  make_glslang_x64.bat  make_spirv_cross.sh  make_spirv_cross_win32.bat  make_spirv_cross_x64.bat  makefile  scene.json
Square.xcodeproj/: project.pbxproj
Square.xcodeproj/xcshareddata/xcschemes/: Square.xcscheme
VisualStudio/: Square.vcxproj  Square.vcxproj.filters
VisualStudio/Driver/: SqDX11.vcxproj  SqDX11.vcxproj.filters  SqOpenGL.vcxproj  SqOpenGL.vcxproj.filters
VisualStudio/Example/: HelloWorld.vcxproj  HelloWorld.vcxproj.filters  HelloWorldCsm.vcxproj  HelloWorldCsm.vcxproj.filters  Model.vcxproj  Model.vcxproj.filters  Model.vcxproj.gabri.nvuser  level.sq
Xcode/Driver/SqOpenGL4.xcodeproj/: project.pbxproj
Xcode/Square.xcodeproj/: project.pbxproj
Xcode/Square.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Xcode/Square.xcworkspace/: contents.xcworkspacedata
common/: Camera.hlsl  DirectionLight.hlsl  Light.hlsl  Matrix.hlsl  PointLight.hlsl  SpotLight.hlsl  Support.hlsl  Transform.hlsl  Vertex.hlsl  common.rs
common/effect/: Base.hlsl  Base.sqfx  CastDirectionShadow.hlsl  CastDirectionShadowInstanced.hlsl  CastDirectionShadowMP.hlsl  CastPointShadow.hlsl  CastPointShadowInstanced.hlsl  CastPointShadowMultiPass.hlsl  CastShadow.sqfx  CastSpotShadow.hlsl  Debug.sqfx  Legacy.hlsl  Legacy.sqfx  PBR.hlsl  PBR.sqfx  PointShadow.hlsl  Shadow.sqfx  Solid.hlsl  Solid.sqfx  SpotShadow.hlsl
common/material/: default.mat
common/shader/: AmbientLight.hlsl  Camera.hlsl  DirectionLight.hlsl  DirectionShadowLight.hlsl  GammaCorrection.hlsl  Light.hlsl  MultiPassInfo.hlsl  PointLight.hlsl  PointShadowLight.hlsl  ShadowCamera.hlsl  SpotLight.hlsl  SpotShadowLight.hlsl  Support.hlsl  Surface.hlsl  SurfaceForward.hlsl  Transform.hlsl  Vertex.hlsl
common/shader/legacy/: AmbientLightLegacy.hlsl  LightLegacy.hlsl  PointLightLegacy.hlsl  SpotLightLegacy.hlsl  SurfaceForwardLegacy.hlsl  SurfaceLegacy.hlsl
common/shader/pbr/: AmbientLightPBR.hlsl  DirectionLightPBR.hlsl  LightPBR.hlsl  NDF.hlsl  PointLightPBR.hlsl  SpotLightPBR.hlsl  SurfaceForwardPBR.hlsl  SurfacePBR.hlsl  UtilsPBR.hlsl
common/texture/: none.tga  none_blue.tga  none_green.tga  none_orange.tga  none_red.tga
dependencies/Win32/lib/: HLSL2ALL.lib  HLSL2ALLd.lib  glew32s.lib  xsc_core.lib  xsc_core_d.lib
dependencies/macOS/lib/: libHLSL2ALL.dylib
dependencies/x64/lib/: HLSL2ALL.lib  HLSL2ALLd.lib  glew32s.lib  xsc_core.lib  xsc_core_d.lib
example/: CMakeLists.txt
example/HelloWorld/: CMakeLists.txt  level.sq  main.cpp  resources.rs
example/HelloWorld/assets/: base_scene.acj  base_scene_mesh0.sm3dgz  box.mat  cube.sm3dgz  effect.hlsl  effect.mat  effect.sqfx  header.hlsl
example/HelloWorldCsm/: .gitignore  CMakeLists.txt  main.cpp  resources.rs
example/HelloWorldCsm/assets/: csm_scene.acj  csm_scene_mesh0.sm3dgz  csm_scene_mesh1.sm3dgz  csm_scene_mesh2.sm3dgz
example/HelloWorldCsm/assets/bottle_scene/: BottleMat_0.mat  Image_0_3.sqtex  Image_2.sqtex  Image_2_1.sqtex  Image_3_0.sqtex  bottle_scene.acj  bottle_scene_mesh0.sm3dgz  bottle_scene_mesh1.sm3dgz  floor_1.mat
example/HelloWorldCsm/assets/sphere_scene/: sphere_scene.acj  sphere_scene_floor.mat  sphere_scene_mesh0.sm3dgz  sphere_scene_mesh1.sm3dgz  sphere_scene_rust.mat  sphere_scene_wall.mat  sphere_scene_wall_st.mat
example/Model/: .gitignore  CMakeLists.txt  GLBReader.h  GLTFImport.h  GLTFReader.h  main.cpp  resources.rs
include/Square/: Config.h  Square.h  SquareMain.h
include/Square/Core/: Allocator.h  Application.h  Attribute.h  BaseEC.h  ByteOrder.h  ClassObjectRegistration.h  (+16 more)
source/: CMakeLists.txt
source/Core/: Allocator.cpp  Application.cpp  BaseEC.cpp  ClassObjectRegistration.cpp  Context.cpp  Filesystem.cpp  Logger.cpp  Object.cpp  ObjectFactory.cpp  Resource.cpp  SharedLibrary.cpp  ShellParser.cpp  StringUtilities.cpp  Time.cpp  UtfConvert.cpp  Variant.cpp
source/Data/: Archive.cpp  AttributeSerialize.cpp  Image.cpp  ImageLoader.cpp  Json.cpp  ParserEffect.cpp  ParserMaterial.cpp  ParserParameters.cpp  ParserResources.cpp  ParserStaticMesh.cpp  ParserTexture.cpp
source/Data/ImageUtils/: stb_image.cpp  tga.cpp
source/Driver/: Render.cpp  RenderGL4.cpp  Window_cocoa.mm  Window_win32.cpp  Window_xorg.cpp
source/Driver/Cocoa/: Input_private.h  Input_private.mm  Screen_private.h  Screen_private.mm  Window_private.h  Window_private.mm  Wrapper_private.h  Wrapper_private.mm
source/Driver/DirectX11/: CMakeLists.txt  DirectX11.h  Interface.h  InterfaceDX11.cpp  RenderDX11.cpp  RenderDX11.h
source/Driver/Metal/: CMakeLists.txt  Interface.h  InterfaceMTL.mm  RenderMTL.h  RenderMTL.mm
source/Driver/OpenGL4/: CMakeLists.txt  Interface.h  InterfaceGL4.cpp  OpenGL4.h  RenderGL4.cpp  RenderGL4.h
source/Driver/Win32/: Input_private.cpp  Input_private.h  Screen_private.cpp  Screen_private.h  Window_private.cpp  Window_private.h  Window_private_dx.cpp  Window_private_gl.cpp  Wrapper.cpp  Wrapper_private.h
source/Driver/Xorg/: Input_private.cpp  Input_private.h  Screen_private.cpp  Screen_private.h  Window_private.cpp  Window_private.h  Wrapper_private.cpp  Wrapper_private.h
source/Geometry/: AABoundingBox.cpp  CreateBounding.cpp  Frustum.cpp  Intersection.cpp  OBoundingBox.cpp  Sphere.cpp
source/Graphics/: Render.cpp
source/Math/: Tangent.cpp
source/Render/: Collection.cpp  Drawer.cpp  DrawerPassDebug.cpp  DrawerPassForward.cpp  DrawerPassShadow.cpp  Effect.cpp  GBuffer.cpp  Light.cpp  Material.cpp  Mesh.cpp  Queue.cpp  ShadowBuffer.cpp  VertexFormat.cpp  Viewport.cpp
source/Resource/: Effect.cpp  Material.cpp  Mesh.cpp  PointLight.cpp  Shader.cpp  ShaderCommonHeader.hlsl  ShaderPreprocess.h  Texture.cpp
source/Scene/: Actor.cpp  Camera.cpp  Component.cpp  ComponentFactory.cpp  DirectionLight.cpp  Level.cpp  SpotLight.cpp  StaticMesh.cpp  World.cpp
tests/: effect.hlsl  effect.sqfx  header.hlsl  main.cpp
(+79 files in other folders)
